[package]
name = "learn_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["full"]}
mini-redis = "*"
bytes = "1"
futures = "0.3.28"
crossbeam = "0.8.2"
tokio-stream = "0.1.14"
